--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -6,7 +6,7 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("/static/fonts/Inter-roman.var.woff2") format("woff2");
+	src: url("https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Regular.woff2") format("woff2");
 	font-named-instance: "Regular";
 }
 
@@ -15,7 +15,7 @@
 	font-style: italic;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("/static/fonts/Inter-italic.var.woff2") format("woff2");
+	src: url("https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Italic.woff2") format("woff2");
 	font-named-instance: "Italic";
 }
 
