✨ A few new code changes + linting time!

--- a/src/routes/error.scss
+++ b/src/routes/error.scss
@@ -1,4 +1,4 @@
-@use "src/styles/_mixins" as *;
+@use 'src/styles/_mixins' as *;
 
 .error-page {
 	@include flex($direction: column, $align: center, $justify: center);
@@ -14,7 +14,7 @@
 	*:not(code),
 	*::before,
 	*::after {
-		font-family: "Microsoft Sans Serif", Tahoma, Arial, sans-serif;
+		font-family: 'Microsoft Sans Serif', Tahoma, Arial, sans-serif;
 		-webkit-font-smooth: never; // this works for every browser apart from Firefox, which has no equivalent
 	}
 
@@ -30,14 +30,14 @@
 		border: none;
 		border-radius: 0;
 		background: silver;
-		box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
-		inset -2px -2px grey, inset 2px 2px #dfdfdf;
+		box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey,
+			inset 2px 2px #dfdfdf;
 		font-size: 1.2rem;
 
 		&:not(:disabled):active {
 			padding: 2px 11px 0 13px;
-			box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a,
-			inset -2px -2px #dfdfdf, inset 2px 2px grey;
+			box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a, inset -2px -2px #dfdfdf,
+				inset 2px 2px grey;
 		}
 
 		&:focus {
@@ -51,8 +51,8 @@
 		margin: 0;
 		padding: 12px 8px;
 		background: #fff;
-		box-shadow: inset -1px -1px #fff, inset 1px 1px grey,
-		inset -2px -2px #dfdfdf, inset 2px 2px #0a0a0a;
+		box-shadow: inset -1px -1px #fff, inset 1px 1px grey, inset -2px -2px #dfdfdf,
+			inset 2px 2px #0a0a0a;
 		overflow: auto;
 
 		code {
@@ -109,8 +109,8 @@
 
 		&-thumb {
 			background-color: #dfdfdf;
-			box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
-			inset -2px -2px #808080, inset 2px 2px #dfdfdf;
+			box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px #808080,
+				inset 2px 2px #dfdfdf;
 		}
 	}
 }
@@ -121,17 +121,17 @@
 	min: {
 		inline-size: 150px;
 		block-size: 375px;
-	};
+	}
 	inline-size: 380px;
 	max-inline-size: calc(100% - 48px);
 	padding: 3px;
 	background: silver;
-	box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,
-	inset -2px -2px grey, inset 2px 2px #fff;
+	box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey,
+		inset 2px 2px #fff;
 	overflow: auto;
 	resize: both;
 
-	@media screen and (width : 648px) {
+	@media screen and (width: 648px) {
 		position: absolute;
 		inset-block-start: 0;
 		inset-inline-start: 0;
@@ -181,19 +181,19 @@
 	}
 
 	button {
-		&[aria-label="Minimize"] {
+		&[aria-label='Minimize'] {
 			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='6' height='2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23000' d='M0 0h6v2H0z'/%3E%3C/svg%3E");
 			background-repeat: no-repeat;
 			background-position: bottom 3px left 4px;
 		}
 
-		&[aria-label="Maximize"] {
+		&[aria-label='Maximize'] {
 			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='9' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 0H0v9h9V0zM8 2H1v6h7V2z' fill='%23000'/%3E%3C/svg%3E");
 			background-repeat: no-repeat;
 			background-position: top 2px left 3px;
 		}
 
-		&[aria-label="Close"] {
+		&[aria-label='Close'] {
 			margin-inline-start: 2px;
 			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0 0h2v1h1v1h2V1h1V0h2v1H7v1H6v1H5v1h1v1h1v1h1v1H6V6H5V5H3v1H2v1H0V6h1V5h1V4h1V3H2V2H1V1H0V0z' fill='%23000'/%3E%3C/svg%3E");
 			background-repeat: no-repeat;
