--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,22 +1,22 @@
-@use "./mixins" as *;
+@use './mixins' as *;
 
 // Sideload inter as a fallback font
 @font-face {
-	font-family: "Inter";
+	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Regular.woff2") format("woff2");
-	font-named-instance: "Regular";
+	src: url('https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Regular.woff2') format('woff2');
+	font-named-instance: 'Regular';
 }
 
 @font-face {
-	font-family: "Inter";
+	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Italic.woff2") format("woff2");
-	font-named-instance: "Italic";
+	src: url('https://cloud.esmerelda.tech/UI/Material/Fonts/Inter/Italic.woff2') format('woff2');
+	font-named-instance: 'Italic';
 }
 
 /*
@@ -24,8 +24,8 @@
  */
 
 :root {
-	--font-family-sans-serif: "Segoe UI Variable Display", "Segoe UI", "Inter", sans-serif;
-	--font-family-monospace: "Cascadia Code", "Fira Code", "Consolas", monospace;
+	--font-family-sans-serif: 'Segoe UI Variable Display', 'Segoe UI', 'Inter', sans-serif;
+	--font-family-monospace: 'Cascadia Code', 'Fira Code', 'Consolas', monospace;
 }
 
 /*
@@ -164,8 +164,8 @@ code {
 
 		&:hover {
 			background: var(--scrollbar-caret-bottom) bottom center/contain no-repeat,
-			var(--scrollbar-caret-top) top center/contain no-repeat,
-			hsl(var(--mica-tint), var(--mica-tint-opacity));
+				var(--scrollbar-caret-top) top center/contain no-repeat,
+				hsl(var(--mica-tint), var(--mica-tint-opacity));
 		}
 
 		&-thumb {
