--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -1,4 +1,4 @@
-@use "./mixins" as *;
+@use './mixins' as *;
 
 .markdown-body {
 	color: var(--fds-text-primary);
@@ -33,7 +33,7 @@
 	// Images
 	figure {
 		margin: 16px 0;
-		
+
 		&.margin- {
 			&top {
 				margin-block: 48px 16px;
@@ -146,7 +146,7 @@
 	kbd {
 		padding: 0.3em 0.4em;
 		color: hsl(70, 5%, 22%);
-		box-shadow: inset 0 -.2em 0 var(--fds-subtle-fill-tertiary);
+		box-shadow: inset 0 -0.2em 0 var(--fds-subtle-fill-tertiary);
 
 		@media (prefers-color-scheme: dark) {
 			color: hsl(0, 0%, 83%);
